# videosubextract

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  flake.nix  justfile
i18n/en/: videosubextract.ftl
models/: PP-OCRv5_mobile_det.mnn  PP-OCRv5_mobile_rec.mnn  PP-OCRv6_medium_det.mnn  PP-OCRv6_medium_rec.mnn  ppocr_keys_v5.txt  ppocr_keys_v6_medium.txt
resources/: app.desktop  app.metainfo.xml
src/: app.rs  apply_traits.rs  config.rs  main.rs  native_video_sub_finder.rs  ocr.rs  subfinder.rs  video_player.rs
src/app/: post_production.rs  prepare.rs  selection_canvas.rs  subtitle.rs
