[package]
name = "videosubextract"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "An application that extracts hard-subs into srt files"
repository = "https://github.com/pop-os/cosmic-app-template"

[dependencies]
eyre = "0.6.12"
ffmpeg-the-third = "5.0.0"
i18n-embed = { version = "0.16", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
open = "5.3.2"

opencv = { version = "0.99.0", features = ["clang-runtime"]}
rust-embed = "8.8.0"
ocr-rs = "2.3.1"

tokio = { version = "1.48.0", features = ["full"] }
image = "0.25.10"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
# Remove features if not needed.
features = [
    # About widget for the app
    "about",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Markdown widget
    "markdown",
    # QR code widget
    "qr_code",
    # GPU-accelerated rendering
    "wgpu",
    # xdg portal dialogs on Linux
    "xdg-portal",
    "debug",
    "winit",
    "surface-message",
    "multi-window",
    "wayland",
    "wgpu",
]

[dependencies.iced]
path = "../libcosmic/iced"
features = [
    "advanced",
    "image-without-codecs",
    "lazy",
    "svg",
    "web-colors",
    "tiny-skia",
]


# Uncomment to test a locally-cloned libcosmic
[patch.'https://github.com/pop-os/libcosmic']
libcosmic = { path = "../libcosmic" }
cosmic-config = { path = "../libcosmic/cosmic-config" }
cosmic-theme = { path = "../libcosmic/cosmic-theme" }
